

#add_executable(servo_node Servo.cpp)
#target_link_libraries(servo_node ${catkin_LIBRARIES} robotcontrol)
#add_dependencies(servo_node lander_junior_ros_generate_messages_cpp)
#install(TARGETS servo_node RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})

#add_executable(esc_node ESC.cpp)
#target_link_libraries(esc_node ${catkin_LIBRARIES} robotcontrol)
#add_dependencies(esc_node lander_junior_ros_generate_messages_cpp)
#install(TARGETS esc_node RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})